test/message/source_map_throw_first_tick.out
reachable
*typescript-throw.ts:18
    throw Error('an exception');
    ^
Error: an exception
    at *typescript-throw.ts:18:11*
    at *typescript-throw.ts:24:1*

Node.js *
